namespace java com.ishangke.edunav.commoncontract.model

/**
 * CouponBo
 */
struct CouponBo {
  1: i32 id
}